fixed extra margin problem in root page

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,11 +1,11 @@
-html, body {
-	margin: 0;
-	padding: 0;
+body {
+	margin: 0px;
+	padding: 0px;
 }
 
 #header {
 	position: relative;
-	top: 20vw;
+	top: 10vw;
 	text-align: center;
 	font-family: 'Architects Daughter', cursive;
 	color: #e5e5e5;
@@ -17,6 +17,7 @@ html, body {
 }
 
 h1 {
+	margin-top: 0px;
 	font-size: 65px;
 }
 
